# tma4280

./: .gitignore
ex4/: CMakeLists.txt  EX4 Report.docx  common.c  ex4 results comp.xlsx  ex4-mpi.c  ex4-mpisplit.c  ex4-omp.c  ex4-omp2k.c  ex4-serial  ex4-serial.c  ex4-serial2k.c  first-successful-output  jobscr-test  jscr-kongull.sh
ex6/: 2bscr.sh  CMakeLists.txt  allin1-1.sh  allin1-2.sh  allin1-3.sh  allin1.sh  bscr.sh  c-t1.o248393  c-t12.o248401  c-t3.o248397  c-t6.o248399  c-t9.o248403  cscr.sh  hybridtest.o248087  hybridtest.sh  initfunc-sawtooth.o248961  initfunc.sh  mpi-pois-column-blows-up.c  mpi-poisson-initf.c  mpi-poisson.c  mpi1-12.o248396  mpi1-6.o248398  mpi2-12.o248395  mpi2-24.o248394  mpi3-24.o248392  mpi3-36.o248391  omptest.o248083  omptest.sh  partb_nn_1.o257511  partb_nn_1.o257599  partb_nn_2.o257512  partb_nn_3.o257513  poisson.c  serial.o248132  serialproper.o257463  serialproper.sh  serialrun.sh  t3_1-2.o248422  t3_1-4.o248409  t3_2-2.o248408  (+9 more)
